[package]
name = "angelfish-adblock"
version = "0.1.0"
authors = ["Jonah Brüchert <jbb.prv@gmx.de>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cbindgen = "0.15"

[dependencies]
adblock = {version = "0.3", default-features = false, features = [ "full-regex-handling", "object-pooling" ]}
publicsuffix = { version = "1.5", default-features = false }
